Fix menu looks & collapsed toggle not working

--- a/static/css/clean-blog.css
+++ b/static/css/clean-blog.css
@@ -43,95 +43,7 @@ hr.small {
   border-width: 4px;
   border-color: white;
 }
-.navbar-custom {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  z-index: 3;
-  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-}
-.navbar-custom .navbar-brand {
-  font-weight: 800;
-}
-.navbar-custom .nav li a {
-  text-transform: uppercase;
-  font-size: 12px;
-  font-weight: 800;
-  letter-spacing: 1px;
-}
-@media only screen and (min-width: 768px) {
-  nav.navbar-custom {
-    background: transparent;
-    border-bottom: 1px solid transparent;
-  }
-  nav.navbar-custom .navbar-brand {
-    color: white;
-    padding: 20px;
-  }
-  nav.navbar-custom .navbar-brand:hover,
-  nav.navbar-custom .navbar-brand:focus {
-    color: rgba(255, 255, 255, 0.8);
-  }
-  .navbar-custom .nav li a {
-    color: white;
-    padding: 20px;
-  }
-  nav.navbar-custom .nav li a:hover,
-  nav.navbar-custom .nav li a:focus {
-    color: rgba(255, 255, 255, 0.8);
-  }
-  nav.navbar-custom .nav .open .dropdown-menu li a {
-    color: #333333;
-  }
-}
-@media only screen and (min-width: 1170px) {
-  nav.navbar-custom {
-    -webkit-transition: background-color 0.3s;
-    -moz-transition: background-color 0.3s;
-    transition: background-color 0.3s;
-    /* Force Hardware Acceleration in WebKit */
-    -webkit-transform: translate3d(0, 0, 0);
-    -moz-transform: translate3d(0, 0, 0);
-    -ms-transform: translate3d(0, 0, 0);
-    -o-transform: translate3d(0, 0, 0);
-    transform: translate3d(0, 0, 0);
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-  }
-  nav.navbar-custom.is-fixed {
-    /* when the user scrolls down, we hide the header right above the viewport */
-    position: fixed;
-    top: -61px;
-    background-color: rgba(255, 255, 255, 0.9);
-    border-bottom: 1px solid #f2f2f2;
-    -webkit-transition: -webkit-transform 0.3s;
-    -moz-transition: -moz-transform 0.3s;
-    transition: transform 0.3s;
-  }
-  nav.navbar-custom.is-fixed .navbar-brand {
-    color: #333333;
-  }
-  nav.navbar-custom.is-fixed .navbar-brand:hover,
-  nav.navbar-custom.is-fixed .navbar-brand:focus {
-    color: #337ab7;
-  }
-  nav.navbar-custom.is-fixed .nav li a {
-    color: #333333;
-  }
-  nav.navbar-custom.is-fixed .nav li a:hover,
-  nav.navbar-custom.is-fixed .nav li a:focus {
-    color: #337ab7;
-  }
-  nav.navbar-custom.is-visible {
-    /* if the user changes the scrolling direction, we show the header */
-    -webkit-transform: translate3d(0, 100%, 0);
-    -moz-transform: translate3d(0, 100%, 0);
-    -ms-transform: translate3d(0, 100%, 0);
-    -o-transform: translate3d(0, 100%, 0);
-    transform: translate3d(0, 100%, 0);
-  }
-}
+
 .intro-header {
   background-color: #555555;
   background: no-repeat center center;
