--- a/static/css/override.css
+++ b/static/css/override.css
@@ -5,30 +5,6 @@
   min-height: 350px;
 }
 
-.navbar .navbar-header > a.navbar-brand {
-  color: #FFFFFF;
-}
-
-.navbar .navbar-header > a.navbar-brand:hover {
-  color: #C3C2C2;
-}
-
-.navbar > ul.navbar-nav > li > a {
-  padding-top: 0px;
-  padding-bottom: 0px;
-  margin-top: 15px;
-  margin-bottom: 15px;
-  color: #C3C2C2;
-}
-
-ul.navbar-nav > li > a:hover, #navbar > ul.navbar-nav > li > a:hover {
-  color: #FFFFFF;
-}
-
-ul.navbar-nav > li:nth-last-of-type(n+2) a {
-  border-right: 1px solid #FFF;
-}
-
 footer.footer {
   background-color: #000;
   color: #C3C2C2;
